Fixes made so app runs better on mobile (nav was too wide and the projects needed to be centered

--- a/frontend/src/App/styles/components/_nav.scss
+++ b/frontend/src/App/styles/components/_nav.scss
@@ -44,6 +44,10 @@
         border-left: none;
         border-top: 5px solid $white;
       }
+
+      @media (max-width: 500px) {
+        margin: 0 1rem;
+      }
     }
   }
 
